<resources>
    <string name="app_name">J聚+</string>
    <string name="about">关于软件</string>
    <string name="hello">Hello My MoneyManager!</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="clean">清空理财数据</string>
    <string name="set_ussafe">设置用户信息</string>
    <string name="set_password">设置密码</string>
    <string name="pass_title">输入验证信息</string>
    <string name="pass_con_title">输入密码</string>
    <string name="confirm_pass">验证密码</string>
    <string name="input_confirm_pass">输入验证密码</string>
    <string name="digital_pass">数字密码</string>
    <string name="no_pass">无密码</string>
    <string name="password_info">安全密码</string>
    <string name="pass_protect">隐私保护</string>
    <string name="set">设置</string>
    <string name="open">理财小助手</string>
    <string name="pass_set_success">设置用户信息成功！</string>
    <string name="dif_pass">用户名不全或密码不一致，请重新输入！</string>
    <string name="pass_cancal">取消用户信息设置成功！</string>
    <string name="cancal">取消</string>
    <string name="password_wrong">用户名或密码错误，请重新输入</string>
    <string name="ok">确认</string>
    <string name="guideactivity">欢迎使用个人理财APP~</string>
    <string name="jz_zhichu">当前支出</string>
    <string name="jz_shouru">当前收入</string>
    <string name="jz_benzhou_zhichu">本周支出</string>
    <string name="jz_benyue_zhichu">本月支出</string>
    <string name="jz_benyue_shouru">本月收入</string>
    <string name="jz_benyueyusuan">本月预算</string>
    <string name="jz_yusuanshengyu">预算余额</string>
    <string name="jz_shouru_bennian">本年收入</string>
    <string name="jz_shouru_benyue">本月收入</string>
    <string name="jz_shouru_jintian">今天收入</string>
    <string name="jz_main_add">添加</string>
    <string name="jz_main_mingxi">明细</string>
    <string name="jz_main_baobiao">报表</string>
    <string name="jz_main_yusuan">预算</string>
    <string name="jz_tab2_zhichu">支出</string>
    <string name="jz_tab2_shouru">收入</string>
    <string name="jz_tab2_jiedai">借贷</string>
    <string name="jz_tab2_jine">金额</string>
    <string name="jz_tab2_leibie">类别</string>
    <string name="jz_tab2_shijian">时间</string>
    <string name="jz_tab2_beizhu">备注</string>
    <string name="jz_tab2_tianjiapic">照片</string>
    <string name="jz_tab2_jinenum">0.00</string>
    <string name="jz_tab2_leibieres">餐饮>晚餐</string>
    <string name="jz_tab2_timeres">20140320</string>
    <string name="jz_tab2_beizhures">无备注</string>
    <string name="jz_add_nowtime">15:15</string>
    <string name="jz_add_save">保存</string>
    <string name="jz_add_del">删除</string>
    <string name="jz_add_quxiao">取消</string>
    <string name="jz_del">del</string>
    <string name="jz_mingxi_tittle">账目明细</string>
    <string name="jz_mingxi_huizhong">汇总</string>
    <string name="jz_mingxi_shengyu">本月剩余</string>
    <string name="leibie_item0_bt">明细类别</string>
    <string name="leibie_item_bt">添加子类</string>
    <string name="beizhu_item_bt">备注</string>
    <string name="time_item_bt">时间</string>
    <string name="jz_tab2_queding">确定</string>
    <string name="jz_yusuan">当前本月预算：</string>
    <string name="js_text_size">T</string>
    <string name="js_main_quanxuan">全选所有</string>
    <string name="js_main_del">删除选中</string>
    <string name="js_mian_quxiaoxuanze">取消选择</string>
    <string name="js_mian_quxiaoshanchu">取消删除</string>
    <string name="js_hint">输入完后直接按返回键，程序将自动保存。</string>
    <string name="jz_1">1</string>
    <string name="jz_2">2</string>
    <string name="jz_3">3</string>
    <string name="jz_4">4</string>
    <string name="jz_5">5</string>
    <string name="jz_6">6</string>
    <string name="jz_7">7</string>
    <string name="jz_8">8</string>
    <string name="jz_9">9</string>
    <string name="jz_0">0</string>
    <string name="jz_d">.</string>
</resources>
