<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@mipmap/base_bg"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/js_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:cacheColorHint="#00000000"
            android:divider="@null"
            android:scrollbars="none" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:background="@mipmap/money_bg"
        android:gravity="top"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        <ImageButton
            android:id="@+id/js_main_addbt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="@mipmap/jz_new"
            android:layout_centerInParent="true"
            android:contentDescription="@string/app_name" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
        <ImageButton
            android:id="@+id/js_main_del"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="@mipmap/jz_del"
            android:layout_centerInParent="true"
            android:contentDescription="@string/app_name"/>

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/js_main_select_ll"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:baselineAligned="false"
        android:background="@mipmap/money_bg"
        android:gravity="top"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <Button
                android:id="@+id/js_main_select_quanxuan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/jz_add_numbt_selector"
                android:text="@string/js_main_quanxuan" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <Button
                android:id="@+id/js_main_select_del"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/jz_add_numbt_selector"
                android:text="@string/js_main_del" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <Button
                android:id="@+id/js_main_select_quxiao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/jz_add_numbt_selector"
                android:text="@string/js_mian_quxiaoxuanze" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <Button
                android:id="@+id/js_main_select_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/jz_add_numbt_selector"
                android:text="@string/js_mian_quxiaoshanchu" />
        </RelativeLayout>
    </LinearLayout>

</FrameLayout>