<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/base_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dip"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:gravity="center_vertical"
            android:text="@string/set"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/nor_concor"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/set"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:background="@drawable/nor_up_concor"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/set_pass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dip"
                    android:gravity="center_vertical"
                    android:text="设置用户信息"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="20dip"
                    android:layout_height="20dip"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dip"
                    android:background="@mipmap/set_jiantou"
                    android:contentDescription="@string/app_name" />
            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dip"
                android:contentDescription="@string/app_name"
                android:background="@mipmap/jz_bg_bottom"/>


            <RelativeLayout
                android:id="@+id/del"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/money_del"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="5dip"
                    android:text="@string/clean"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="20dip"
                    android:layout_height="20dip"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dip"
                    android:background="@mipmap/set_jiantou"
                    android:contentDescription="@string/app_name" />
            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dip"
                android:contentDescription="@string/app_name"
                android:background="@mipmap/jz_bg_bottom"/>

            <RelativeLayout
                android:id="@+id/web"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/visit_web"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="5dip"
                    android:text="理财吧"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="20dip"
                    android:layout_height="20dip"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dip"
                    android:background="@mipmap/set_jiantou"
                    android:contentDescription="@string/app_name" />
            </RelativeLayout>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dip"
                android:contentDescription="@string/app_name"
                android:background="@mipmap/jz_bg_bottom"/>


            <RelativeLayout
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/about_sw"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="5dip"
                    android:text="@string/about"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="20dip"
                    android:layout_height="20dip"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dip"
                    android:background="@mipmap/set_jiantou"
                    android:contentDescription="@string/app_name" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>