<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@mipmap/base_titlebar_bg"
            android:baselineAligned="false" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/js_new_time_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right" >

                <ImageButton
                    android:id="@+id/js_new_color_ib"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="10dp"
                    android:contentDescription="@string/app_name"
                    android:layout_marginBottom="5dp"
                    android:background="@mipmap/js_color" />

                <ImageButton
                    android:id="@+id/js_new_size_ib"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="10dp"
                    android:contentDescription="@string/app_name"
                    android:layout_marginBottom="5dp"
                    android:background="@mipmap/js_size"/>

                <ImageButton
                    android:id="@+id/js_new_del_ib"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="@mipmap/js_del"
                    android:contentDescription="@string/app_name"
                    />

                <ImageButton
                    android:id="@+id/js_new_exit_ib"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="@mipmap/js_exit"
                    android:contentDescription="@string/app_name"
                    />

            </LinearLayout>
        </LinearLayout>


        <EditText
            android:id="@+id/js_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/js_list_bg"
            android:gravity="top"
            android:hint="@string/js_hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <LinearLayout
                android:id="@+id/js_new_bgcolor_ll"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="40dp"
                android:background="@mipmap/js_color_bg" >

                <RelativeLayout
                    android:id="@+id/js_new_bgcolor_1_rl"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="9dp"
                    android:background="@mipmap/js_new_et_bg_1" >
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/js_new_bgcolor_2_rl"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="9dp"
                    android:background="@mipmap/js_new_et_bg_2" >
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/js_new_bgcolor_3_rl"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="9dp"
                    android:background="@mipmap/js_new_et_bg_3" >
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/js_new_bgcolor_4_rl"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="9dp"
                    android:background="@mipmap/js_new_et_bg_4" >
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/js_new_bgcolor_5_rl"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="9dp"
                    android:background="@mipmap/js_new_et_bg_5" >
                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">
                <LinearLayout
                    android:id="@+id/js_new_textsize_ll"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="45dp"
                    android:background="@mipmap/js_color_bg"
                    android:baselineAligned="false" >

                    <RelativeLayout
                        android:id="@+id/js_new_textsize_1_rl"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:gravity="bottom" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="@string/js_text_size"
                            android:textColor="#000000"
                            android:textSize="20dp"
                            android:layout_marginBottom="10dp"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/js_new_textsize_2_rl"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="bottom"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:gravity="bottom" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="@string/js_text_size"
                            android:textColor="#000000"
                            android:textSize="24dp"
                            android:layout_marginBottom="8dp"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/js_new_textsize_3_rl"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="top" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="@string/js_text_size"
                            android:textColor="#000000"
                            android:textSize="29dp"
                            android:layout_marginTop="6dp"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/js_new_textsize_4_rl"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="bottom"
                        android:layout_weight="1"
                        android:gravity="top" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="@string/js_text_size"
                            android:textColor="#000000"
                            android:textSize="34dp"
                            android:layout_marginTop="3dp"/>
                    </RelativeLayout>
                </LinearLayout>
            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:gravity="bottom" >

        </RelativeLayout>
    </LinearLayout>

</FrameLayout>